<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="none">

        <item
            android:id="@+id/action_login"
            android:title="@string/menu_login"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_aim"
            android:title="@string/menu_aim"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_screenshot"
            android:title="@string/menu_log"
            app:showAsAction="never" />

    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/action_calibrate"
            android:title="@string/menu_calibrate"
            app:showAsAction="never" />

    </group>

    <item
        android:id="@+id/action_test"
        android:title="@string/menu_test"
        android:visible="false"
        app:showAsAction="never" />

</menu>